--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,6 +5,11 @@
     <title>YGO Draft</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="YGO Draft is a one stop shop for drafting and building Yu-Gi-Oh! decks."
+    />
+    <meta name="keywords" content=" ygodraft, yugioh, draft " />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
